--- a/pages/navBar.html
+++ b/pages/navBar.html
@@ -2,6 +2,7 @@
     <div class="leftMenu">
         <a href="../pages/noticePage.html">공지사항</a>
         <a href="../pages/faqPage.html">고객센터</a>
+        <a href="../pages/equipmentPage.html">기구 설명</a>
         <a href="../pages/regHealthPage.html">헬스장 등록</a>
     </div>
 
