--- a/pages/loginPage.html
+++ b/pages/loginPage.html
@@ -29,7 +29,7 @@
                     <span>로그인 상태 유지</span>
                 </label>
                 <div class="findLinks">
-                    <a href="#">아이디/비밀번호 찾기</a>
+                    <a href="../pages/findAccountPage.html">아이디/비밀번호 찾기</a>
                 </div>
             </div>
 
