--- a/pages/regHealthPage.html
+++ b/pages/regHealthPage.html
@@ -49,9 +49,9 @@
                 <div class="couponBox">
                     <div class="couponInfo">
                         <span class="couponName">신규 회원 20% 할인 쿠폰</span>
-                        <span class="couponCode">CODE: LOVEHEALTH</span>
+                        <span class="couponCode">CODE: X-MAS</span>
                     </div>
-                    <button type="button" class="copyBtn" onclick="navigator.clipboard.writeText('LOVEHEALTH')">코드 복사</button>
+                    <button type="button" class="copyBtn" onclick="navigator.clipboard.writeText('X-MAS')">코드 복사</button>
                 </div>
                 <p class="notice">* 오른쪽 결제 상세 창에 코드를 입력하고 적용해 주세요.</p>
             </div>
