--- a/pages/myPage.html
+++ b/pages/myPage.html
@@ -54,6 +54,10 @@
                         <span>결제 수단 <strong id="planMethod">-</strong></span>
                     </div>
 
+                    <div class="ptCountArea">
+                        <span class="ptCountLabel">PT 잔여 횟수</span>
+                        <strong id="ptCountDisplay" class="ptCountValue">0회</strong>
+                    </div>
                 </div>
             </div>
 
@@ -61,8 +65,20 @@
                 <p>현재 이용 중인 멤버십이 없습니다.</p>
                 <a href="regHealthPage.html" class="buyBtn">멤버십 등록하기 &gt;</a>
             </div>
+
+            <div class="spacer" style="height: 40px;"></div>
+
+            <h4 class="columnTitle">PT 수업 예약 내역</h4>
+            <div id="ptReservationList" class="ptList">
+            </div>
+            <div id="noPtReservation" class="emptyState" style="display: none;">
+                <p>예약된 수업이 없습니다.</p>
+                <a href="ptBookingPage.html" class="buyBtn" style="background-color: #333;">수업 예약하기 &gt;</a>
+            </div>
+
         </div>
     </section>
+
     <section class="dashboardBox lockerSection">
         <div class="lockerHeader">
             <h3 class="boxTitle">개인 사물함</h3>
@@ -77,7 +93,12 @@
                     <strong class="passValue" id="lockerPassword">0000</strong>
                 </div>
             </div>
+        </div>
 
+        <div id="lockerVoucherContent" class="emptyState" style="display: none;">
+            <p style="color: #2ecc71; font-weight: 700; margin-bottom: 5px;">무료 이용권 보유 중</p>
+            <p style="font-size: 13px; color: #666;">아직 사물함 위치를 선택하지 않으셨습니다.</p>
+            <button class="registerLockerBtn" onclick="location.href='regLocker.html'">자리 선택하러 가기</button>
         </div>
 
         <div id="noLockerContent" class="emptyState" style="display: none;">
