--- a/pages/regLocker.html
+++ b/pages/regLocker.html
@@ -41,12 +41,15 @@
 
             <div class="priceInfo">
                 <span>월 이용료</span>
-                <strong>10,000원</strong>
+                <div class="priceDetail">
+                    <span class="original" style="text-decoration: line-through; color: #999; margin-right: 8px;">10,000원</span>
+                    <strong style="color: #2ecc71;">0원 (1개월 무료)</strong>
+                </div>
             </div>
 
-            <p class="noticeText">* 이용 기간은 멤버십 만료일과 동일하게 설정됩니다.</p>
+            <p class="noticeText">* 무료 이용 기간 종료 후 유료로 전환됩니다.</p>
 
-            <button id="registerBtn" class="registerBtn">등록 및 결제하기</button>
+            <button id="registerBtn" class="registerBtn">무료 등록하기</button>
         </div>
     </section>
 </main>
